# setdm

./: .gitignore  FRONTEND_UI_IMPROVEMENTS.md  FRONTEND_UPDATES.md  PROFILE_PICTURES_IMPLEMENTATION.md  README.md  WEBHOOK_IMPLEMENTATION_SUMMARY.md
.cursor/: index.mdc
backend/: .env.example  ARCHITECTURE.md  DATABASE_SETUP.md  ENV.example  IMPLEMENTATION_SUMMARY.md  MIGRATIONS_GUIDE.md  PROTECTING_ROUTES.md  README.md  WEBHOOK_SETUP.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/core/: config.py
backend/app/db/: __init__.py  base.py  crud.py  models.py
backend/app/features/auth/: __init__.py  dependencies.py  mock_db.py  models.py  router.py  schemas.py  security.py
backend/app/features/chats/: __init__.py  router.py  schemas.py
backend/app/features/example/: __init__.py  router.py
backend/app/features/realtime/: __init__.py  router.py
backend/app/features/webhooks/: __init__.py  router.py
backend/app/integration/unipile/: README.md  __init__.py  client.py  example_usage.py  router.py  schemas.py
backend/app/services/: ai_assistant.py  autopilot.py  message_sync.py  pending_message_processor.py  realtime.py  webhook_manager.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: 20241122_add_assist_mode.sql  20241122_add_sent_by_autopilot.sql
frontend/: AUTHENTICATION.md  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AppHeader.tsx  ChatListItem.tsx  MessageInput.tsx  MessageList.tsx  ProtectedRoute.tsx
frontend/lib/: api.ts  (+1 more)
(+10 files in other folders)
